# frameworkkk

./: .gitignore  DSL_REFERENCE.md  DSL_SUMMARY.md  Dockerfile  EXECUTOR_DSL.md  README.md  SKILL.md  constants.dsl  debug_dsl_parsing.py  generate_contracts.py  output.txt  pyproject.toml  repair_contracts.py  report.md  requirements.txt  run_test_dsl.py  showcase.dsl  test_bootstrap.dsl  test_dsl_parsing.py  test_executor.dsl  verify_triggers.py
public/: main.py
public/js/: dsl.js  grid.js
src/application/: bbb.md  dsl.md  view.md
src/application/action/: save.dsl  somma.dsl
src/application/controller/: counter.dsl  terminal.dsl  tris.dsl
src/application/model/: email.json  password.json  session.json  user.json  username.json
src/application/repository/: logging.dsl  repository.dsl  sessions.contract.json  sessions.py  sessions.test.py
src/framework/manager/: defender.contract.json  defender.py  executor.contract.json  executor.py  loader.py  loader.test.dsl  messenger.contract.json  messenger.py  messenger.test.dsl  networker.py  orchestrator.py  presenter.py  storekeeper.contract.json  storekeeper.py  storekeeper.test.dsl  tester.contract.json  tester.py  tester.test.py
src/framework/port/: authentication.py  manage.py  message.py  network.py  persistence.py  presentation.contract.json  presentation.py
src/framework/scheme/: io.json  messenger.json  requirement.json  result.json  session.json  sla.json  storekeeper.json  tags.json  transaction.json  user.dsl  user.json
src/framework/service/: bootstrap.dsl  context.py  context.test.dsl  data_driven.test.dsl  diagnostic.py  factory.contract.json  factory.py  factory.test.dsl  flow.contract.json  (+21 more)
tests/: dsl_comprehensive_test.dsl  run_dsl_comprehensive.py
(+80 files in other folders)
