[project]
name = "cloud.colosso"
version = "0.1.0"
description = "Un'app di esempio con OmniPort"  
readme = "README.md"
requires-python = ">=3.9"
key = "rSc4ExXBDvtKF03pHd8W3Kz5VfSW7z0ITQsAR46nELg"
mode = "development"

[project.policy]
presentation = "demo.dsl"
#persistence = "redis.toml"
#message = "log.toml"


[[message.console]]
name = "backend"
host = "xxxx"
port = "13976"
database = "database-MJZMYZ6J"
username = "default"
password = "3LkESG6clHa2hJj1zF8CabQlqU50O6zL"