[project]
name = "cloud.colosso"
version = "0.1.0"
description = "Un'app di esempio con OmniPort"  
readme = "README.md"
requires-python = ">=3.9"
key = "rSc4ExXBDvtKF03pHd8W3Kz5VfSW7z0ITQsAR46nELg"
mode = "development"

[manager.defender]
soglia_tentativi = 5
timeout_blocchi = 3600
presentation = "demo.dsl"
#persistence = "redis.toml"
#message = "log.toml"

[manager.messenger]
debug_mode = true

[[message.console]]
persistence = "log"
name = "console"

[[presentation.console]]
name = "tui"

[[persistence.filesystem]]
name = "log"

[[network.neural]]
name = "decoder"
input = 40
hidden = 2048
output = 2048